load("@npm//:defs.bzl", "npm_link_all_packages")

# Copyright Google Inc. All Rights Reserved.
#
# Use of this source code is governed by an MIT-style license that can be
# found in the LICENSE file at https://angular.dev/license
package(default_visibility = ["//visibility:public"])

licenses(["notice"])

npm_link_all_packages()
