load("@aspect_bazel_lib//lib/private:tar_toolchain.bzl", "tar_toolchain")

# Copyright Google Inc. All Rights Reserved.
#
# Use of this source code is governed by an MIT-style license that can be
# found in the LICENSE file at https://angular.dev/license
# @external_begin
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

exports_files([
    "package_json_release_filter.jq",
])

nodejs_binary(
    name = "ng_cli_schema",
    data = [
        "ng_cli_schema_generator.js",
    ],
    entry_point = "ng_cli_schema_generator.js",
)

nodejs_binary(
    name = "quicktype_runner",
    data = [
        "quicktype_runner.js",
        "@npm//quicktype-core",
    ],
    entry_point = "quicktype_runner.js",
    templated_args = ["--bazel_patch_module_resolver"],
)

tar_toolchain(
    name = "system_tar_exec",
    binary = "tar_system.bat",
)

toolchain(
    name = "windows_tar_system_toolchain",
    exec_compatible_with = ["@platforms//os:windows"],
    toolchain = ":system_tar_exec",
    toolchain_type = "@aspect_bazel_lib//lib:tar_toolchain_type",
)
# @external_end
