load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("//tools:defaults.bzl", "js_binary")

package(default_visibility = ["//visibility:public"])

platform(
    name = "windows_x64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

exports_files([
    "package_json_release_filter.jq",
])

js_binary(
    name = "ng_cli_schema",
    data = [
        "ng_cli_schema_generator.js",
    ],
    entry_point = "ng_cli_schema_generator.js",
)

js_binary(
    name = "quicktype_runner",
    data = [
        "quicktype_runner.js",
        "//:node_modules/quicktype-core",
    ],
    entry_point = "quicktype_runner.js",
)

# TODO(devversion): Improve this by potentially sharing this common block.
copy_file(
    name = "copy_worker_js",
    src = "@tsc_worker//file",
    out = "ts_worker.mjs",
)

js_binary(
    name = "vanilla_ts_worker",
    data = [
        ":copy_worker_js",
        "//:node_modules/@angular/compiler-cli",
        "//:node_modules/typescript",
    ],
    entry_point = ":copy_worker_js",
    fixed_args = ["--vanilla-ts"],
)
